--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,5 @@
 
   <div class="chart" id="container"></div>
 
-  <button type="button">Настроить колесо</button>
+  <button app-button type="button">Настроить колесо</button>
 </main>
