--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,10 +6,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 100%;
     padding: 40px;
   }
 
   .chart {
-    // height: 100%;
+    height: 100%;
   }
 }
