add setup dialog

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,7 @@
 
   <div class="chart" id="container"></div>
 
-  <button app-button type="button">Настроить колесо</button>
+  <button app-button type="button" (click)="openWheelSetup()">
+    Настроить колесо
+  </button>
 </main>
