--- a/src/app/core/components/button/button.component.scss
+++ b/src/app/core/components/button/button.component.scss
@@ -40,7 +40,7 @@
   }
 
   &--blue {
-    background-color: var(--color-bg-2);
+    background-color: var(--color-cyan-main);
 
     transition: all 350ms ease;
 
@@ -57,7 +57,7 @@
   }
 
   &--grey {
-    background-color: var(--color-bg-3);
+    background-color: var(--color-text-gray);
 
     transition: all 350ms ease;
 
