--- a/src/styles/global/_variables.scss
+++ b/src/styles/global/_variables.scss
@@ -2,16 +2,12 @@
   --color-white: #ffffff;
   --color-black: #000000;
 
-  --color-bg-1: #f0f4f7;
-  --color-bg-2: #1581c6;
-  --color-bg-3: #535353;
-  --color-bg-4: #003354;
-  --color-bg-5: #e0e0e0;
-  --color-bg-6: #d9d9d9;
+  --color-light-blue-main: #eef5ff;
+  --color-gray-main: #f7f8fa;
+  --color-cyan-main: #37c0e5;
 
-  --color-blue-gray-3: #d8e2e8;
-  --color-blue-gray-6: #8da2b0;
+  --color-text-gray: #5d6588;
+  --color-text-main: #000e4b;
 
-  --color-text-1: #324754;
-  --color-text-2: #6b818f;
+  --font-family-inter: "Inter", sans-serif;
 }
