--- a/src/app/core/components/form-fields/number/number-field.component.html
+++ b/src/app/core/components/form-fields/number/number-field.component.html
@@ -1,8 +1,9 @@
-<div class="text-field" [class.--transparent]="transparent">
-  <label class="text-field__inner">
-    <button (click)="decrease()">-</button>
+<div class="number-field" [class.--transparent]="transparent">
+  <label class="number-field__inner">
+    <button class="number-field__button" (click)="decrease()">-</button>
+
     <input
-      class="text-field__input"
+      class="number-field__input"
       type="number"
       min="1"
       max="10"
@@ -11,6 +12,7 @@
       (ngModelChange)="changeData($event)"
       [disabled]="disabled"
     />
-    <button (click)="increase()">+</button>
+
+    <button class="number-field__button" (click)="increase()">+</button>
   </label>
 </div>
