--- a/src/app/core/components/form-fields/number/number-field.component.scss
+++ b/src/app/core/components/form-fields/number/number-field.component.scss
@@ -1,39 +1,48 @@
+@import "../../../../../styles/mixins/typo";
+
 :host {
   display: block;
   max-width: 100%;
 
-  .text-field {
+  .number-field {
     position: relative;
-    display: block;
-    max-width: 100%;
-    padding: 15px 16px;
-
-    background-color: var(--color-blue-gray-3);
-    border: 1px solid var(--color-blue-gray-6);
-    border-radius: 16px;
+    margin-top: 14px;
 
     &.--transparent {
       background-color: transparent;
 
       .text-field__input {
-        color: var(--color-text-1);
+        color: var(--color-text-main);
 
         &::placeholder {
-          color: var(--color-text-1);
+          color: var(--color-text-main);
         }
       }
     }
 
     &__inner {
       display: flex;
+      align-items: center;
     }
 
     &__input {
-      color: var(--color-text-1);
-      background-color: transparent;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 30px;
+      height: 30px;
+      margin: 0 5px;
+
+      background-color: var(--color-gray-main);
+      border: 1px solid var(--color-cyan-main);
+      border-radius: 6px;
+
+      @include typo--regular-12;
+      text-align: center;
+      color: var(--color-text-main);
 
       &::placeholder {
-        color: var(--color-text-1);
+        color: var(--color-text-main);
       }
 
       &::-webkit-outer-spin-button,
@@ -41,6 +50,20 @@
         -webkit-appearance: none;
         margin: 0;
       }
+    }
+
+    &__button {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 20px;
+      height: 20px;
+
+      @include typo--regular-12;
+
+      background-color: var(--color-gray-main);
+      border: 1px solid var(--color-cyan-main);
+      border-radius: 6px;
     }
   }
 }
