--- a/src/app/core/components/form-fields/textarea/textarea-field.component.html
+++ b/src/app/core/components/form-fields/textarea/textarea-field.component.html
@@ -1,7 +1,7 @@
-<div class="text-field" [class.--transparent]="transparent">
-  <label class="text-field__inner">
+<div class="textarea-field" [class.--transparent]="transparent">
+  <label class="textarea-field__inner">
     <textarea
-      class="text-field__input"
+      class="textarea-field__input"
       [placeholder]="placeholder"
       [disabled]="disabled"
       [ngModel]="data"
