--- a/src/app/core/components/dialogs/wheel-setup/steps/area-life/area-life.component.scss
+++ b/src/app/core/components/dialogs/wheel-setup/steps/area-life/area-life.component.scss
@@ -13,4 +13,10 @@
   &__title {
     @include typo--h2;
   }
+
+  &__field {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
