--- a/src/app/core/components/form-fields/text/text-field.component.html
+++ b/src/app/core/components/form-fields/text/text-field.component.html
@@ -1,5 +1,7 @@
-<div class="text-field" [class.--transparent]="transparent">
+<div class="text-field">
   <label class="text-field__inner">
+    <span class="text-field__label">{{ label }}</span>
+
     <input
       class="text-field__input"
       type="text"
