--- a/src/styles/mixins/_typo.scss
+++ b/src/styles/mixins/_typo.scss
@@ -22,6 +22,14 @@
   font-stretch: normal;
 }
 
+@mixin typo--regular-15 {
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 18px;
+  font-style: normal;
+  font-stretch: normal;
+}
+
 @mixin typo--h2 {
   font-weight: 600;
   font-size: 14px;
