--- a/src/app/core/components/button/button.component.scss
+++ b/src/app/core/components/button/button.component.scss
@@ -1,4 +1,5 @@
 @import "../../../../styles/mixins/bootstrap";
+@import "../../../../styles/mixins/typo";
 
 .button {
   $root: &;
@@ -7,69 +8,29 @@
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 120px;
+  height: 40px;
+  padding: 11px 14px;
+
+  @include typo--regular-12;
+  color: var(--color-white);
+
+  background-color: var(--color-cyan-main);
 
   border-radius: 8px;
+
+  transition: all 350ms ease;
+
+  &:focus,
+  &:hover {
+    transform: scale3d(1.05, 1.05, 1.01);
+  }
 
   &__icon {
     margin-right: 16px;
   }
 
-  &--large {
-    padding: 17px;
-
-    font-size: 16px;
-    line-height: 22px;
-    color: var(--color-white);
-  }
-
-  &--medium {
-    padding: 11px;
-
-    font-size: 16px;
-    line-height: 22px;
-    color: var(--color-white);
-
-    @include media-breakpoint-up(md) {
-      padding: 17px;
-    }
-
-    @media screen and (orientation: landscape) and (max-device-width: 1023px) {
-      padding: 6px 11px;
-    }
-  }
-
-  &--blue {
-    background-color: var(--color-cyan-main);
-
-    transition: all 350ms ease;
-
-    &:focus,
-    &:hover {
-      transform: scale3d(1.05, 1.05, 1.01);
-    }
-
-    &#{$root}--disabled {
-      opacity: 0.3;
-
-      pointer-events: none;
-    }
-  }
-
-  &--grey {
-    background-color: var(--color-text-gray);
-
-    transition: all 350ms ease;
-
-    &:focus,
-    &:hover {
-      transform: scale3d(1.02, 1.02, 1.01);
-    }
-
-    &#{$root}--disabled {
-      opacity: 0.3;
-
-      pointer-events: none;
-    }
+  &--full {
+    width: 100%;
   }
 }
