--- a/src/app/modules/homepage/homepage.component.html
+++ b/src/app/modules/homepage/homepage.component.html
@@ -5,7 +5,7 @@
 
   <div class="chart" id="container"></div>
 
-  <button app-button type="button" (click)="openWheelSetup()">
+  <button app-button type="button" size="full" (click)="openWheelSetup()">
     Настроить колесо
   </button>
 </main>
