--- a/src/app/core/components/dialogs/wheel-setup/wheel-setup.dialog.scss
+++ b/src/app/core/components/dialogs/wheel-setup/wheel-setup.dialog.scss
@@ -1,7 +1,12 @@
 .setup-dialog {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+
   &__footer {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-top: auto;
   }
 }
