--- a/src/app/core/components/dialogs/dialog.component.scss
+++ b/src/app/core/components/dialogs/dialog.component.scss
@@ -33,7 +33,7 @@
   &__body {
     position: relative;
 
-    height: 100%;
+    min-height: 100%;
     padding: 20px 15px;
 
     background-color: var(--color-light-blue-main);
