--- a/src/app/core/components/dialogs/wheel-setup/steps/area-life/area-life.component.html
+++ b/src/app/core/components/dialogs/wheel-setup/steps/area-life/area-life.component.html
@@ -28,13 +28,23 @@
       </div>
 
       <app-textarea-field
-        [formControl]="getAreaControl(step - 2).get('title')"
+        [formControl]="getAreaControl(step - 2).get('grade_1_desc')"
         label="Описание оценки 1"
       ></app-textarea-field>
 
       <app-textarea-field
-        [formControl]="getAreaControl(step - 2).get('title')"
+        [formControl]="getAreaControl(step - 2).get('grade_10_desc')"
         label="Описание оценки 10"
+      ></app-textarea-field>
+
+      <app-textarea-field
+        [formControl]="getAreaControl(step - 2).get('grade_current_desc')"
+        label="Описание текущей оценки"
+      ></app-textarea-field>
+
+      <app-textarea-field
+        [formControl]="getAreaControl(step - 2).get('grade_next_desc')"
+        label="Что необходимо сделать, чтобы перейти не следующий уровень"
       ></app-textarea-field>
     </div>
   </ng-container>
