--- a/src/app/core/components/dialogs/wheel-setup/wheel-setup.dialog.scss
+++ b/src/app/core/components/dialogs/wheel-setup/wheel-setup.dialog.scss
@@ -3,6 +3,12 @@
   flex-direction: column;
   height: 100%;
 
+  &__content {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 40px;
+  }
+
   &__footer {
     display: flex;
     align-items: center;
