--- a/src/app/core/components/button/button.component.scss
+++ b/src/app/core/components/button/button.component.scss
@@ -33,4 +33,10 @@
   &--full {
     width: 100%;
   }
+
+  &--disabled {
+    opacity: 0.3;
+    cursor: default;
+    pointer-events: none;
+  }
 }
