--- a/src/app/modules/homepage/homepage.component.scss
+++ b/src/app/modules/homepage/homepage.component.scss
@@ -3,9 +3,14 @@
   flex-direction: column;
   align-items: center;
   height: 100%;
-  padding: 40px;
+
+  padding: 20px 15px;
+
+  background-color: var(--color-light-blue-main);
 }
 
 .chart {
-  height: 100%;
+  // height: 100%;
+
+  background-color: var(--color-light-blue-main);
 }
