replace highcharts -> chart.js

--- a/src/app/modules/homepage/homepage.component.html
+++ b/src/app/modules/homepage/homepage.component.html
@@ -3,6 +3,10 @@
 
   <h2>Узнайте, где вы находитесь и где вы хотите быть.</h2>
 
+  <div class="chart-container">
+    <canvas id="MyChart"></canvas>
+  </div>
+
   <div class="chart" id="container"></div>
 
   <button app-button type="button" size="full" (click)="openWheelSetup()">
