--- a/src/app/modules/homepage/homepage.component.scss
+++ b/src/app/modules/homepage/homepage.component.scss
@@ -9,8 +9,7 @@
   background-color: var(--color-light-blue-main);
 }
 
-.chart {
-  // height: 100%;
-
-  background-color: var(--color-light-blue-main);
+.chart-container {
+  width: 100%;
+  margin: 40px 0;
 }
