add font and fix titles

--- a/src/app/modules/homepage/homepage.component.html
+++ b/src/app/modules/homepage/homepage.component.html
@@ -1,10 +1,12 @@
-<main class="wrapper">
-  <h1>Колесо Баланса</h1>
+<main class="homepage">
+  <h1 class="homepage__title">Колесо Баланса</h1>
 
-  <h2>Узнайте, где вы находитесь и где вы хотите быть.</h2>
+  <h2 class="homepage__subtitle">
+    Узнайте, где вы находитесь и где вы хотите быть.
+  </h2>
 
   <div class="chart-container">
-    <canvas id="MyChart"></canvas>
+    <canvas id="chart"></canvas>
   </div>
 
   <div class="chart" id="container"></div>
