--- a/src/app/modules/homepage/homepage.component.scss
+++ b/src/app/modules/homepage/homepage.component.scss
@@ -1,12 +1,17 @@
-.homepage {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 100%;
+@import "../../../styles/mixins/bootstrap";
 
+.homepage {
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: 68px auto;
+  height: 100%;
   padding: 20px 15px;
 
   background-color: var(--color-light-blue-main);
+
+  &__header {
+    text-align: center;
+  }
 
   &__title {
     margin-bottom: 15px;
@@ -15,21 +20,54 @@
   &__subtitle {
     text-align: center;
   }
-}
 
-.chart-container {
-  width: 100%;
-  margin: 40px 0;
+  &__section {
+    height: 100%;
+
+    @include media-breakpoint-up(mx) {
+      display: grid;
+      grid-template-columns: 75% 25%;
+    }
+  }
+
+  &__chart {
+    width: 100%;
+    margin: 40px 0;
+
+    @include media-breakpoint-up(mx) {
+      max-height: 80vh;
+
+      canvas {
+        margin: 0 auto;
+      }
+    }
+  }
+
+  &__settings {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__legend {
+    width: 100%;
+    margin-bottom: 20px;
+
+    @include media-breakpoint-up(mx) {
+      margin-bottom: auto;
+    }
+  }
 }
 
 .legend {
-  width: 100%;
-  margin-bottom: 20px;
-
   &__list {
     display: grid;
     gap: 10px;
     grid-template-columns: 50% 50%;
+
+    @include media-breakpoint-up(mx) {
+      margin-top: 68px;
+      grid-template-columns: 100%;
+    }
   }
 
   &__item {
