--- a/src/app/core/components/dialogs/wheel-setup/steps/area-life/area-life.component.html
+++ b/src/app/core/components/dialogs/wheel-setup/steps/area-life/area-life.component.html
@@ -1,49 +1,49 @@
-<form *ngIf="step$ | async as step" [formGroup]="form" class="area-life">
+<form [formGroup]="form" class="area-life">
   <ng-container formArrayName="areas">
-    <div [formGroup]="getAreaControl(step - 2)">
+    <div [formGroup]="getAreaControl(step)">
       <p class="area-life__text--small">
         Вы можете использовать стандартные категории жизни или же сделать свои.
       </p>
 
       <h2 class="area-life__title">
-        Сфера: {{ getAreaControl(step - 2).value.title }}
+        Сфера: {{ getAreaControl(step)?.value.title }}
       </h2>
 
       <app-text-field
-        [formControl]="getAreaControl(step - 2).get('title')"
+        [formControl]="getAreaControl(step).get('title')"
         placeholder="Area Name"
         label="Название сферы"
       ></app-text-field>
 
       <div class="area-life__field">
         <app-number-field
-          [formControl]="getAreaControl(step - 2).get('point')"
+          [formControl]="getAreaControl(step).get('point')"
           label="Ваше текущее состояние"
         ></app-number-field>
 
         <app-color-field
-          [formControl]="getAreaControl(step - 2).get('color')"
+          [formControl]="getAreaControl(step).get('color')"
           label="Цвет графика"
         ></app-color-field>
       </div>
 
       <app-textarea-field
-        [formControl]="getAreaControl(step - 2).get('grade_1_desc')"
+        [formControl]="getAreaControl(step).get('grade_1_desc')"
         label="Описание оценки 1"
       ></app-textarea-field>
 
       <app-textarea-field
-        [formControl]="getAreaControl(step - 2).get('grade_10_desc')"
+        [formControl]="getAreaControl(step).get('grade_10_desc')"
         label="Описание оценки 10"
       ></app-textarea-field>
 
       <app-textarea-field
-        [formControl]="getAreaControl(step - 2).get('grade_current_desc')"
+        [formControl]="getAreaControl(step).get('grade_current_desc')"
         label="Описание текущей оценки"
       ></app-textarea-field>
 
       <app-textarea-field
-        [formControl]="getAreaControl(step - 2).get('grade_next_desc')"
+        [formControl]="getAreaControl(step).get('grade_next_desc')"
         label="Что необходимо сделать, чтобы перейти не следующий уровень"
       ></app-textarea-field>
     </div>
