--- a/src/app/core/components/dialogs/wheel-setup/steps/area-life/area-life.component.html
+++ b/src/app/core/components/dialogs/wheel-setup/steps/area-life/area-life.component.html
@@ -6,8 +6,12 @@
       </p>
 
       <h2 class="area-life__title">
-        Сфера: {{ getAreaControl(step)?.value.title }}
+        Сфера: {{ getAreaControl(step).get("title")?.value }}
       </h2>
+
+      <p class="area-life__description">
+        {{ getAreaControl(step).get("description")?.value }}
+      </p>
 
       <app-text-field
         [formControl]="getAreaControl(step).get('title')"
