add reset dialog

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,4 +1,5 @@
 <main class="homepage">
+  <button type="button" class="homepage__reset" (click)="reset()"></button>
   <section class="homepage__section">
     <div class="homepage__body">
       <header class="homepage__header">
